Right adjusted map.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
     img[alt=fitw100] { width: 100%; float: center; display: block; margin-left: auto; margin-right: auto}
     img[alt=fitw75] { width: 75%; float: center; display: block; margin-left: auto; margin-right: auto}
     img[alt=fitw50] { width: 50%; float: center; display: block; margin-left: auto; margin-right: auto}
+    img[alt=fitw33] { width: 33%; float: center; display: block; margin-left: auto; margin-right: auto}
     img[alt=fitw25] { width: 25%; float: center; display: block; margin-left: auto; margin-right: auto}
     img[alt=fitw10] { width: 10%; float: center; display: block; margin-left: auto; margin-right: auto}
+
+    img[alt=fitw33r] { width: 33%; float: right; display: block; margin-left: auto; margin-right: auto}
 
     /* let the nav toggle show up */ 
     .icon-bar {
